fixed 'more info' issue on smaller screens

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -116,7 +116,7 @@ video {
 
     .layer-left-active {
         transition: 300ms ease;
-        margin-bottom: 280px;
+        margin-bottom: 218px;
 
         h1 {
             //color:red;
@@ -289,6 +289,7 @@ video {
     bottom: 0px;
 
     .credits {
+        width: 160%;
         //background: red;
     }
 }
@@ -297,7 +298,8 @@ video {
     opacity: 0;
     bottom: -120px;
     .credits {
-        //background: blue;
+        width: 160%;
+        //background: red;
     }
 }
 
@@ -1062,11 +1064,15 @@ a {
     }
 
     .layer-left-active {
-        margin-bottom: 220px !important;
+        margin-bottom: 218px !important;
     }
 
     .credit {
         font-size: 16px !important;
+    }
+
+    .credits {
+        width: 90% !important;
     }
 
     .bio-content {
